同步于: 10月24日10时3分

--- a/pages/p5/950190.md
+++ b/pages/p5/950190.md
@@ -1,4 +1,4 @@
-### 忠义之气可与岳飞媲美 猜猜他是谁？(图)
+### 中国官方称粮食产量达最好水平 谎言被戳破(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="忠义之气可与岳飞媲美——诸葛亮" src="https://img2.secretchina.com/pic/2019/8-18/p2494832a866101758-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="粮食 玉米 进口" src="https://img2.secretchina.com/pic/2019/11-24/p2569012a759900918-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   忠义之气可与岳飞媲美——诸葛亮（图片来源：天外客／正见网）
+   多迹象表明粮食危机日益逼近。（图片来源：Adobe stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,74 +29,60 @@
   </div>
  </div>
  <p>
-  一谈到忠义之气，很多人会想到
+  【看中国2020年10月24日讯】（看中国记者李正鑫综合报导）10月23日消息，中国可能发放更多
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/岳飞" target="_blank">
-    岳飞
+   玉米进口
+  </strong>
+  配额，而中国农业农村部却称，
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/粮食" target="_blank">
+    粮食
    </span>
   </strong>
-  。有点历史知识，对岳飞生平事迹有所了解的，今天到了位于河南安阳汤阴县的岳飞庙，看到岳飞巍然屹立的塑像，头顶匾额上“还我河山”的巍峨大字，对岳飞会肃然起敬，会被岳飞的“浩气忠魂”所感动。岳飞的
-  <strong>
-   忠义
-  </strong>
-  之气贯通古今。
+  产量预计达到历史最好水平。多迹象表明粮食危机日益逼近，而玉米还涉及养殖、工业等多行业的需求难题。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  岳飞的故事在《说岳全传》里以小说演义的形式出现，绘声绘色，形象生动。岳飞对母亲很孝顺，听母亲的话。岳母怕岳飞以后随着地位的升迁失去
-  <span href="https://www.secretchina.com/news/gb/tag/忠义" target="_blank">
-   忠义
+  中国每年大约需要2.8亿吨玉米，虽然此前已经进行了大量的储备，但现在几乎已经见底，促使买家转向购买大米和小麦等替代品，同时增加玉米进口。中国过去四年的
+  <span href="https://zh.wikipedia.org/zh-cn/%E7%8E%89%E7%B1%B3" target="_blank">
+   玉米
   </span>
-  本色，在他的后背上刺上“尽忠报国”四个字（在小说中是“精忠报国”）；岳飞领兵打仗，秉承忠义本色，带出一支“冻死不拆屋，饿死不掳掠”的岳家军，金国士兵只要看到“岳”字旗就闻风丧胆；被秦桧以“莫须有”的罪名诬陷入狱，岳飞也没有屈打成招。第一次在大理寺卿被审讯时，岳飞脱去布衫，露出背上“尽忠报国”四个字，亲见者无不动容，相信岳飞是冤枉的，但面对秦桧的淫威，正义者都感到无能为力。秦桧安排自己的亲信强迫岳飞写下供状，岳飞写下了“天日昭昭、天日昭昭”八个大字，一片忠义之气、忠义之心，力透纸背，苍天可监。一直到岳飞屈死风波亭，给后人留下了不可磨灭的忠义之气。
- </p>
- <p>
-  历史上还有一个人物的忠义之气可以和岳飞相媲美，就是老少妇孺皆知的
-  <span href="https://www.secretchina.com/news/gb/tag/诸葛亮" target="_blank">
-   诸葛亮
+  消费量超过产量，从而刺激
+  <span href="https://zh.wikipedia.org/zh-cn/%E9%80%B2%E5%8F%A3" target="_blank">
+   进口
   </span>
-  。
+  增加。随着中国囤积更多
+  <span href="https://zh.wikipedia.org/zh-cn/%E7%B2%AE%E9%A3%9F" target="_blank">
+   粮食
+  </span>
+  ，全球粮价势必会上涨。
  </p>
  <p>
-  大陆的读者阅读《三国演义》，看到诸葛亮出场后，故事精彩连呈，很多人关注的是诸葛亮的智谋，运筹帷幄的本事，但很少有读者关注到诸葛亮的忠义之气。岳飞的忠义之气，是在善恶较量，激烈的碰撞中表现，很容易引起人心灵的共鸣，能激起人对恶的憎恶，对善的渴望与赞美。诸葛亮的不是，他是在一言一行，在一场场政治、军事较量中体现，而且他的智勇双全很容易掩盖他的忠义之气，不仔细思考与体察，很容易被忽略。
+  中国目前对
+  <span href="https://www.secretchina.com/news/gb/tag/玉米" target="_blank">
+   玉米
+  </span>
+  进口实行每年720万吨的低关税配额制度，配额之外的进口要面临高达购买价65%的关税。
  </p>
  <p>
-  诸葛亮未出茅庐，已经知道天下要三分，这是天意。刘备因自己的皇叔身份，觉得自己有责任匡扶汉室，所以要以汉室名义再次一统天下。诸葛亮为了酬谢刘备的三顾茅庐之恩义，一心一意的帮助刘备实现梦想，整个过程中可谓尽心尽力，一片忠义之心。从刘备无立足之地，到有点政治资本与积累，最后片隅川蜀之地建立蜀国政权。
+  据《路透社》10月23日独家报道，北京当局将发放更多较低关税
+  <span href="https://www.secretchina.com/news/gb/tag/进口" target="_blank">
+   进口
+  </span>
+  配额，在新的作物销售年度额外购买数百万吨玉米。据三位消息人士称，根据已批准额度，北京当局2020/21销售年度从美国订购了约1,200万吨玉米，从乌克兰等其它地区订购了约500万吨玉米。
  </p>
  <p>
-  建立蜀国后，有帮助刘备出谋划策，联吴抗曹，训练士兵积极备战，为国家的未来发展制定了一系列政策，为民为国操碎了心。
+  据芝加哥经纪公司Futures International的资深分析师Terry Reilly称，“未来10年，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  可能会成为玉米进口大国，从而改变全球玉米市场的格局。”
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  刘备听说关羽被吴国所杀，要倾一国之力讨伐东吴。诸葛亮没有死谏刘备，是因为诸葛亮知道刘、关、张的桃园三结义，会为未来奠定“义”文化，“义”文化要有始有终，虽然东吴不当灭，刘备即使兵败，也为奠定未来文化尽了力，从另一方面讲，是成就了刘备，这同样是诸葛亮忠义的表现。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  刘备兵败，困守白帝城，把刘禅讬付给诸葛亮，并嘱咐：如果刘禅不合适当皇帝，诸葛亮可以取而代之。《三国演义》中描述诸葛亮的表现：孔明听毕，汗流遍地，手足无措，泣拜于地曰：“臣安敢不竭股肱之力，尽忠贞之节，继之以死乎！”言讫，叩头流血。中共党文化称之为诸葛亮虚伪，怕被刘备杀头，故意为之。根本不是。满脑子党文化，否定传统文化的中共御用文人，根本就体会不到人有了忠义之气后的表现。笔者引用这段文字，能真实的感受到诸葛亮言行中的忠义之气。
+  中国今年迄今预定的船货供应远超过官方年度玉米配额，一位消息人士透露，此前中粮集团获得并使用至少500万吨低关税配额订购的船货以美国玉米为主，交货日期一直到2021年4月。“首先是我们确实需要玉米。其次我们与美国达成的协议也要履行。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -111,7 +97,7 @@
   </div>
  </center>
  <p>
-  刘禅即位后，诸葛亮明知蜀国灭不了魏国，也统一不了天下，但是诸葛亮仍然像刘备在世时那样，帮助刘备实现未竟的愿望。六出祁山，讨伐魏国，每次都是各种原因兵败而回。战场上的不确定的因素太多，特别是兵败的，最容易引起溃败与伤亡，但是诸葛亮每次都是全身而退，这难道不是诸葛亮忠义之气的体现？！
+  这位消息人士指的是中美达成的第一阶段贸易协议。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +112,67 @@
   </div>
  </center>
  <p>
-  失街亭一节，中共又是编入中学课本，又是变成戏剧，目的可不是颂扬诸葛亮，而是贬低丑化诸葛亮，那么有智慧，上知天文，下知地理，能掐会算的人，怎么会出现这么低级的错误？
+  而在10月21日的新闻发布会上，中国农业农村部官员称，“农业农村经济保持了持续向好、稳中有进的态势。粮食丰收已成定局，预计产量达到历史最好水平……”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  针对官方的言论，中国民众质疑：“那玉米为何涨价，为何还用外汇从国外进口？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  目前，中国玉米价格由于供应担忧涨至纪录新高，而今年稍早美国玉米价格则跌至10多年低点。这引起市场广泛关注，现货玉米的均价最高已超过2600元人民币/吨，期货价格也一度突破2600元（人民币，下同）大关，创下了2004年9月期货合约上市以来新高。虽然10月份中国东北地区新季玉米陆续收获上市，但新季玉米仍然维持高开高走，整体的价格还是一路上扬。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  玉米在下游饲料加工中被广泛使用，其用量比例占据整个饲料产量的50%以上。今年在玉米价格不断上涨的过程当中，生猪养殖的利润空间也因此不断被压缩，客观上也使得未来生猪养殖对于高价玉米的接受度大幅下降。其它下游都呈现出阶段性的亏损状态，部分深加工行业更是长期亏损，被迫降低设备开机率。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  玉米也是工业方面的原料，主要是酒精、燃料乙醇，以及淀粉用的玉米，特别是酒精、燃料乙醇方面的需求陡增，也推高了玉米价格。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +191,7 @@
   </ins>
  </center>
  <p>
-  诸葛亮灭不了魏国，这是天意，每次兵出祁山，都是注定要失败的。街亭当时是个重要的军事重地，换任何人去守，都必失，只是时间长短而已。诸葛亮安排言过其实的马谡去守街亭，用意很深。未来的文化不能没有教训存在，马谡为后世留下宝贵的教训：言过其实，不可大用；另外一点，是成就了马谡，能在未来的文化中留下名字都是非同小可的事。
+  并且玉米还涉及玉米油、玉米纤维饲料、玉米蛋白粉、生物天然气、纤维素乙醇产业链等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,7 +206,11 @@
   </div>
  </center>
  <p>
-  《三国演义》中有一句话评价诸葛亮：诸葛一生唯谨慎。确实是，诸葛亮做事很谨慎，他要考虑的不单单是当时的境况与天象变化，既要顺应天意，又要为未来留下表现仁、义、礼、智、信，忠、孝、节、义等文化，不能不谨慎，可以说诸葛亮为了人类的未来鞠躬尽瘁，操碎了心血，单单一个“忠义之气”，诸葛亮用尽了出山后所有的能力去演绎，直到病死五丈原。即使在病重期间，安排的后世中同样贯穿着诸葛亮的忠义之气，读者用心读就能领略一二。
+  今年
+  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+   武汉肺炎
+  </span>
+  疫情全球流行，一度引发了国际粮食市场波动。联合国世界粮食计划署与粮农组织近期共同发布的《严重粮食不安全热点地区早期预警》，给出了具体的信息，“至少25个国家今年将面临严重饥荒风险，全球濒临50年来最严重的粮食危机。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -175,7 +225,26 @@
   </div>
  </center>
  <p>
-  站在党文化的角度研究《三国演义》，站在否定古人的角度研究诸葛亮，永远得不到真知灼见。摒弃党文化，复兴传统文化，走回传统路时，人一定能得到许多正的认识与不一样的感受和思想的升华。
+  为了确保本国供应，武汉肺炎疫情发生以来，俄罗斯、越南、埃及、印度等多个国家限制甚至停止粮食出口，全球粮食供应链受到很大冲击，一些严重依赖粮食进口的国家更是陷入了极大的被动。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中国国家主席
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
+  </span>
+  在8月表态，“对粮食安全还是始终要有危机意识，今年全球疫情所带来的影响更是给我们敲响了警钟。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -239,13 +308,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/910977.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/910977.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/910977.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/22/910977.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950190.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950190.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950190.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/24/950190.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/910977.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/950190.md' width='0px' height='0px'/>
