--- a/pages/p5/950276.md
+++ b/pages/p5/950276.md
@@ -1,4 +1,4 @@
-### 北京插手TikTok交易 双面夹击还是增加筹码？
+### 在华美企如何看习近平的经济“内循环”？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,91 +6,117 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p>
-  【看中国2020年9月3日讯】北京当局日前更新限制
-  <strong>
-   技术
-  </strong>
-  出口目录，让
-  <strong>
-   TikTok
-  </strong>
-  在美国的命运再添变数。有消息称，TikTok美国业务的出售
-  <strong>
-   交易
-  </strong>
-  因此可能难以很快达成，或拖至美国总大选之后。而
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-    川普
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/6-20/p2715211a726896154-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   在华美企对北京当局宏观政策说一套作一套感到失望及不安。（图片来源：Adobe Stock）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-   (特朗普)
-  </strong>
-  总统则再次强调，如果未在期限内达成出售协议，TikTok将被封禁。北京的介入为TikTok及其中国母公司字节跳动增加了筹码，还是令其遭受有人所形容的“美中混合双打”？
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
-   </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  【透視共產黨合集2】為何中國不等於中共？中共為何像流氓？](http://141.164.51.119:10000/videos/news/../res/detox/index.html)
-
-#### [ 🔥  内蒙局势升级 传大量装甲车现身街头](http://141.164.51.119:10000/videos/news/0903.html)
-
-#### [ 🔥  【陈光诚专访】 当年发生了什麽？为什麽要支持川普竞选总统？触目惊心的亲身经历告诉你背后的故事](http://141.164.51.119:10000/videos/news/cgc02.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  上周五，就在有消息传出
-  <span href="https://www.secretchina.com/news/gb/tag/TikTok" target="_blank">
-   TikTok
-  </span>
-  出售交易接近达成之际，中国商务部和科技部发布限制技术出口的更新目录，其中包含的“基于数据分析的个性化信息推送服务技术”显然直指TikTok出售交易中可能包括的推送算法。这意味着TikTok的出售交易可能还要获得北京当局的许可，而北京当局也可以否决这项交易。
+  【看中国2020年10月24日讯】中共五中全会将至，
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+    习近平
+   </span>
+  </strong>
+  频频提出
+  <strong>
+   经济
+  </strong>
+  “双循环”的概念，现在似乎全国已经将双循环，尤其是
+  <strong>
+   内循环
+  </strong>
+  当作大事来抓。那么，对中国经济举足轻重的在华外国企业又如何看待中国经济战略的转向呢？一些在中国的美国
+  <strong>
+   企业
+  </strong>
+  代表们表示，他们对中国消费市场的潜力跃跃欲试，但也对北京当局宏观政策说一套作一套感到失望及不安。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  华盛顿智库战略与国际研究中心科技政策项目主任刘易斯（James Lewis）认为，TikTok之事令北京当局措施不及，北京修改12年来都没有更新过的
-  <span href="https://www.secretchina.com/news/gb/tag/技术" target="_blank">
-   技术
+  从今年五月开始，中国领导人习近平把
+  <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
+   经济
   </span>
-  出口管制目录， 是一种报复措施，“一方面是中方感到愤怒，一方面是中方想要确保在任何协议中有一席之地。”
+  双循环战略挂在嘴边。从政治局会议到南巡深圳，习近平反复提及，要在充满不确定性的大时代，调整中国经济对外国经济的依赖，鼓励中国内部消费及内部创新。
  </p>
  <p>
-  川普总统8月6日签署行政命令，宣布TikTok对美国国家安全构成威胁，限制美国人和企业在45天后与TikTok以及其中国母公司字节跳动进行
-  <span href="https://www.secretchina.com/news/gb/tag/交易" target="_blank">
-   交易
+  <strong>
+   美企看双循环：
+   <span href="https://www.secretchina.com" target="_blank">
+    中国
+   </span>
+   经济不得不面对的转型挑战
+  </strong>
+ </p>
+ <p>
+  “这所谓的双循环几乎让所有人都困惑……，实际上就是试图让中国经济对外国技术降低依赖，……试图往供应链更有价值的上端发展。”中国美国商会主席葛国瑞（Greg Gilligan）22日在美国非营利组织Concordia举办的一场有关美企看中国的活动上解读。
+ </p>
+ <p>
+  葛国瑞在中国经商超过25年，担任过包含麦当劳在内多家美企的中国代表或顾问。他观察，中国意识到过去靠劳动力密集型产业、大拆大建的经济增长模式已难以持续，加上美中
+  <span href="https://www.secretchina.com/news/gb/tag/贸易战" target="_blank">
+   贸易战
   </span>
-  。总统在8月14日签署的另一项行政命令要求字节跳动在90天内剥离TikTok在美资产。
+  及疫情的影响，"双循环"规划将是未来中国经济的重要驱动力。
  </p>
  <p>
-  过去数周来，市场传出多家美国公司有意收购TikTok在美国、加拿大、新西兰和澳大利亚的业务，其中微软和沃尔玛联手的团队和甲骨文公司是两大主要竞购方。
+  “美国约有70%的经济活动来自消费者。在中国，我认为目前处于略高于50%的水平。在2003年Sars大流行期间，中国的这个数字仅约30%。”葛国瑞认为，中国当局设定目标希望往继续刺激国内消费的方向进一步发展。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  字节跳动表示将严格遵守相关法规，处理关于技术出口的相关业务。但一些分析人士认为，TikTok得以让用户沉迷其中的独特算法是这项金额为200亿到300亿美元的交易的核心价值所在，北京方面的监管介入将削弱TikTok的价值。
+  <strong>
+   中国内需市场潜力大但外企担忧民粹抵制潮
+  </strong>
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  美国霍夫斯特拉大学法学教授古举伦（Julian Ku）推测，北京宣布的出口管制措施将损害TikTok的价值。他说：“因为它给美国买方造成不确定性，他们不确定是否可以从北京当局那里获得所需的许可，不确定TikTok在没有那项受
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  这块中国经济内循环的潜在大饼，美国
+  <span href="https://www.secretchina.com/news/gb/tag/企业" target="_blank">
+   企业
   </span>
-  出口管制的技术的情况下能否运行。”
+  看到机会，却也对政治的不确定性有所保留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -105,7 +131,7 @@
   </div>
  </center>
  <p>
-  美国商业新闻频道CNBC此前报道说，预计最早将于9月1日宣布相关交易，但截至目前尚无任何宣布。《华尔街日报》周二援引知情人士的话说，中国新的技术出口限制让交易谈判变得复杂，使得很快达成协议的可能性降低，其中问题的关键是算法是否可以包含在交易之中。
+  通用汽车（GM）中国公共政策与政府关系副总裁谢崇伟在同场会议上细数着中国汽车市场的数据。“上周五的数据，中国每1000人的拥车量为约150，美国每1000人的拥车量为约800，欧洲约600。我们估计中国大概能达到400，意味着两到三倍的巨大成长潜力。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -120,7 +146,7 @@
   </div>
  </center>
  <p>
-  不过战略与国际研究中心的刘易斯认为，TikTok的主要价值在于其家喻户晓的品牌及其用户基础和云架构等，而算法可以重新开发。
+  不过，谢崇伟提到了过去当中国外交上与别国发生冲突后，外国汽车品牌受到影响的几个案例，比如2012年中国的反日抗议活动，导致丰田等日系汽车销量暴跌；2017年反韩风潮起，导致现代等韩系汽车销量大跌，至今仍未恢复。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -135,7 +161,7 @@
   </div>
  </center>
  <p>
-  他说：“字节跳动现在可以说，我们现在得向北京的监管者兜售这个协议了，这另外值另外几十亿。所以这有助于字节跳动提高价格，只要交易达成。如果交易达不成，TikTok就真的毁了。”
+  谢崇伟坦言，这一波美中对抗的氛围对美系汽车有影响，虽在可控范围之内，但他最大的担忧仍是中国消费市场的稳定及持久性。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -150,7 +176,9 @@
   </div>
  </center>
  <p>
-  路透社星期三援引消息人士的话说，TikTok的潜在买家正在和字节跳动商讨四种可能方案，包括收购不含核心算法的TikTok在美资产、与这一协议的美国监管方美国海外投资委员会 （CFIUS）谈判争取最长一年的过渡期、向中国申请转让算法的许可以及字节跳动向买方授权算法的使用。
+  <strong>
+   中国承诺保障外国投资、知识产权外企：说一套作一套
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -165,37 +193,7 @@
   </div>
  </center>
  <p>
-  目前尚不清楚双方会采纳哪个方案，以及协议可否在川普总统想要的截止日前完成，尤其是后三种还需要获得美国或中国监管部门的批准。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  彭博社星期二援引消息人士的话说，由于需要获得美中两国政府的审批，交易谈判有可能会拖至美国总统大选之后。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  如果如此，根据川普总统的行政命令，TikTok可能会被封禁。川普总统星期二谈及TikTok时再次表示，9月15日是截止日。他说：“我告诉他们，他们必须在9月15日之前达成协议——在那之后我们会在这个国家将它关闭，”
+  其他几位分别来自科技、能源、生化产业的美企代表也有相同的担忧。英特尔(Intel)中国企业战略办公室总经理布伦特・杨（Brent Young）形容，随着贸易战升温，美企在中国正面对一个紧张的环境。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -214,7 +212,7 @@
   </ins>
  </center>
  <p>
-  但一些分析认为，大选后潜在的政府更迭也许让TikTok有机会重新与美国政府谈判。TikTok的母公司字节跳动上个月向美国法院提起诉讼，挑战川普总统8月6日签署的禁止与TikTok一切交易的行政命令。与此同时，中国媒体报道说，字节跳动也在准备美国业务的“关停预案”。
+  埃克森美孚（Exxon Mobil）中国投资有限公司董事长万立帆（Fernando Vallina）则说，如何控制调整现金流，以及判断中国投资市场的长期情况是他最大的挑战。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,7 +227,7 @@
   </div>
  </center>
  <p>
-  有观察人士说， 北京新的限制措施旨在让北京当局获得相关交易的话语权，同时也是向外界展示，北京也有值得保护的知识产权，为美中之间的科技较量提供筹码。
+  “我们花很了多时间试图弄清中国政府政策在短期或长期对产业的影响。”美国陶氏化学（Dow Chemical）大中华区政府事务总经理徐旸举例，当习近平许诺要在2060年前实现“碳中和”，企业却不太明白这些宏观的大政策到底是什么意思？又会如何落实？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -244,7 +242,7 @@
   </div>
  </center>
  <p>
-  霍夫斯特拉大学的古举伦教授说：“它可以对未来的案例发出信号，表明中国技术不得在没有审批的情况下出售给外国公司，这也许可以视为北京当局意在加强其在管理中国科技发展当中所扮演的角色，并显示出中国自身就是强大的科技创造者。”
+  葛国瑞说，这类政策的不透明或不到位，也发生在中国政府多次承诺要保障外企的投资环境、知识产权保护等政策上。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -259,7 +257,7 @@
   </div>
  </center>
  <p>
-  但是战略与国际研究中心的刘易斯认为，华盛顿仍然占据上风。
+  “这些问题令人担忧，因为宏观政策跟实际行为往往不够一致，也就是说，中国权力高层提出了我们(外企)期望的政策。但是实际并没有按照我们希望的、实现公平竞争的方式来实现。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -274,7 +272,7 @@
   </div>
  </center>
  <p>
-  “我想北京总是想秀一下肌肉，显示他们是重要的，”他说，“但问题是，这是否符合他们的利益。唯一符合北京利益的地方只是在于向美国展示说，美国不能强迫中国公司出售业务。但这就产生了问题。因为我认为，川普政府不会在意公司是否破产。川普政府不会在意。他们因此最终占据上风。北京会秀肌肉，但最终设定步调的是华盛顿。”
+  葛国瑞提到，日前对美国企业在中国的调查报告发现，约七成受访企业尚未有将供应链迁出中国的计划，但对大环境的不确定感，在2020年格外令外企感到担忧。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -306,7 +304,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -338,13 +336,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945046.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945046.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945046.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/03/945046.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950276.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950276.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950276.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/24/950276.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/945046.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/950276.md' width='0px' height='0px'/>
