--- a/pages/p8/950286.md
+++ b/pages/p8/950286.md
@@ -1,4 +1,4 @@
-### “悟”透自己(图)
+### 这10点能领悟 人生就能自在
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,72 +6,63 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="当你悟透自己时，你也就看透了人生，你才明白活着是一件多么幸福的事。" src="https://img3.secretchina.com/pic/2020/6-19/p2714582a791119534-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   当你悟透自己时，你也就看透了
-   <strong>
-    人生
-   </strong>
-   ，你才明白活着是一件多么
-   <strong>
-    幸福
-   </strong>
-   的事。(图片来源：Adobe stock)
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+ <p dir="ltr">
+  <strong>
+   第一、
+   <span href="https://www.secretchina.com/news/gb/tag/知足常乐" target="_blank">
+    知足常乐
    </span>
-  </br>
+   ，乐在心富。
+  </strong>
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
+   </span>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实](http://141.164.39.94:10000/videos/legend/425.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  电影《永恒的五十分钟》（长春电视插播事件改编） ](http://141.164.39.94:10000/videos/news/ComingForYou-2.html)
-
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
- <p>
-  <span href="https://www.secretchina.com/news/gb/tag/人生" target="_blank">
-   人生
-  </span>
-  在世，和“自己”相处最多，打交道最多，但是往往悟不透“自己”。
+ <p dir="ltr">
+  人们常说知足常乐吗？乐什么，乐我们的心富！虽没有多少财产，收入也没有在职的高，但我们心无牵挂。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
- <p>
-  走上坡路时，往往把自己估计过高，认为一切都能垂手可得，甚至把
+ <p dir="ltr">
+  知足者身贫而心富，贪得者身富而心贫。
+ </p>
+ <p dir="ltr">
+  人是有思想的，思想
+  <span href="https://www.secretchina.com/news/gb/tag/富有" target="_blank">
+   富有
+  </span>
+  才是真正的富有。
+ </p>
+ <p dir="ltr">
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/运气" target="_blank">
-    运气
-   </span>
+   第二
   </strong>
-  和机遇，也看作自己身价的一部分而喜不自胜。
- </p>
- <p>
-  走下坡路时，又往往妄自菲薄，把自己估计过低，把困难和不利看作是自己的无能，而实际上是被怯懦的心态掩埋了自己鲜活的生命。
- </p>
- <p>
-  悟透自己，就是正确认识自己。既知道自己的优势，也知道自己的不足。
- </p>
- <p>
-  人一旦有了自知之明，就没有什么克服不了的困难，没有什么过不去的坎。
- </p>
- <p>
+  、
   <strong>
-   【01】悟示弱
+   人生的昨天、明天、今天
   </strong>
+  。
+ </p>
+ <p dir="ltr">
+  迷惑的人活在昨天，奢望的人活在明天，只有清澈的人活在今天。
+ </p>
+ <p dir="ltr">
+  昨天已经过去，是过了期的支票，明天还没有来到，是不可提取的支票，只有活在今天是最现实的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -85,84 +76,9 @@
    </center>
   </div>
  </center>
- <p>
-  一个人太强势，不管出发点是不是好的，一定会受到伤害。真正强大的人，一定懂得示弱；真正锋利的尖刀，必须知道藏锋。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  你再强大，也难以敌过群体，不懂示弱，免不了处处树敌，树敌太多，你的强大反成了打倒自己的利器。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这世上有钝口的往往都是利刃，你如果总是逞强，就一定不是真正强者，而是貌似强大的弱者。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  谷子成熟了，就低下了头，若不低头，风会将之吹折，雨会将之腐朽，鸟儿也会将果实作为食物而果腹充饥，只有空空如也的秕子，才会昂着头招摇在风中。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  示弱其实很简单，在关键时听从别人意见，懂得换位思考，让人合作有安全感。示弱不是妥协，是为了更快达到目标。学会示弱，做熟透稻谷！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+ <p dir="ltr">
   <strong>
-   【02】悟放弃
+   第三、要明白自己只是过客，少计较得失。
   </strong>
  </p>
  <center>
@@ -177,8 +93,8 @@
    </center>
   </div>
  </center>
- <p>
-  世间万物，有舍才有得。
+ <p dir="ltr">
+  人生不必斤斤计较，让自己怒火攻心。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,8 +108,8 @@
    </center>
   </div>
  </center>
- <p>
-  放弃名利，收获淡然；放弃杂念，收获坦荡；放弃仇恨，收获快乐；放弃过去，收获成长。
+ <p dir="ltr">
+  “生年不过百，常怀千岁忧。百事从心起，一笑解千愁”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,8 +123,8 @@
    </center>
   </div>
  </center>
- <p>
-  人生就是一个不断选择、不断放弃的过程。
+ <p dir="ltr">
+  如果想到我们都是来去匆匆的过客，只不过是到世间走一遭，还有什么鸡毛蒜皮的小事值得计较呢？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -222,24 +138,9 @@
    </center>
   </div>
  </center>
- <p>
-  把烦恼踩在脚下，把希望装在心中，凡事看淡一些，不计较，不苛求，当一切尘埃落定，往日的喧嚣归于平静，我们才会真正懂得：放弃也是一种选择，失去也是一种收获。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
+ <p dir="ltr">
   <strong>
-   【03】悟心境
+   第四、要知道为何而活着。
   </strong>
  </p>
  <center>
@@ -254,8 +155,8 @@
    </center>
   </div>
  </center>
- <p>
-  人生不过百年，转眼也就成空，我们匆匆来人间一趟，生不带来，死不带去，一切邂逅，悲喜皆由心定。
+ <p dir="ltr">
+  需求越小，自由越多；奢华越少，舒适越多。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -269,8 +170,8 @@
    </center>
   </div>
  </center>
- <p>
-  有个人因为突发脑溢血，从生死线上走了一遭，下了手术台之后整个像变了个人似的，不再动不动就操心生气，也不再因为一点点小事就郁闷，见谁都笑呵呵的，偶尔碰见什么纠纷，还帮劝着别人想开点儿。
+ <p dir="ltr">
+  活得简单不难，只需懂得为自己而活，为美好而生，为幸福而做。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -284,8 +185,7 @@
    </center>
   </div>
  </center>
- <p>
-  朋友问她最近身体怎么样，她笑着说：“好着呢，最主要是现在心态好，啥事儿也不生气，就觉得这日子特别顺心。”
+ <p dir="ltr">
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -299,8 +199,10 @@
    </center>
   </div>
  </center>
- <p>
-  朋友说：“是啊，心态好了，就都好了，不生气，就是最大的赢家。”
+ <p dir="ltr">
+  <strong>
+   第五、要学会分清三多与三少。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -314,8 +216,8 @@
    </center>
   </div>
  </center>
- <p>
-  她叹了口气，说：“以前傻啊，闺女跟女婿吵一架，我恨不得操心半个月，老头子买玉米，只买了一根给自己吃，我也要跟他生半天闷气……现在想想何必啊，做父母的，最怕就是对子女操心操过了头，你在这儿急得不行，人家还不领情。过日子也是一样，能把自己活明白了就很难得了，哪还有闲心去跟别人计较，跟别人生气呢。”
+ <p dir="ltr">
+  多一分快怡，少一分忧伤；多一分真实，少一分虚伪；多一分悠闲，少一分忙乱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -329,8 +231,8 @@
    </center>
   </div>
  </center>
- <p>
-  人生，过的是心情，生活，活的是心态。但任何事都是相对的，好也罢坏也罢，全看你怎么想、怎么对待。
+ <p dir="ltr">
+  这三多三少很重要，有了它们就活得心情舒畅。我们完全可以自主地安排好生活，善待自己，这样便会内心富饶。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -344,8 +246,10 @@
    </center>
   </div>
  </center>
- <p>
-  我们改变不了别人，至少能左右自己，很多时候，换个角度、换个心境，就又是柳暗花明一片清净。
+ <p dir="ltr">
+  <strong>
+   第六、要学会少气多闲，身忙心闲。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -359,8 +263,55 @@
    </center>
   </div>
  </center>
- <p>
-  明白了这一点，心就大了。心大了，再大的事也都成了芝麻小事，动动指头就把它弹走了。
+ <p dir="ltr">
+  真正做到这八个字不容易，关键是个“闲”字。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  就是安度晚年也一定要有闲心，当然干点家务事也好，如果什么事都不做也无聊，但是不要身忙心乱， 要身忙心闲。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  <strong>
+   第七、要学会适应，看淡人与事。
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  改变一下自己的态度去适应不同的情况，心情轻松舒畅，不要心郁气结，跟自己过不去。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -378,9 +329,24 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p>
+ <p dir="ltr">
+  看透一切人与事，自己不要跟自己过不去，一定要善待自己，不要烦恼。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
   <strong>
-   【04】悟独处
+   第八、要学会选择，分辨主次轻重。
   </strong>
  </p>
  <center>
@@ -395,13 +361,40 @@
    </center>
   </div>
  </center>
- <p>
+ <p dir="ltr">
+  人生一场，有人追屋逐堡，有人则要风花雪月，花棚石凳，小坐微醺，歌一曲，茗一杯，自得其乐。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
+  住宅舒适方便就行了，何必非要楼上楼下。一首歌，一杯茶，养养花，养养鱼，享受自然之美也是很好。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p dir="ltr">
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/林语堂" target="_blank">
-    林语堂
-   </span>
+   第九、要学会欣赏大自然、享受大自然。
   </strong>
-  说：“孤独两个字拆开，有孩童，有瓜果，有小犬，有蚊蝇，足以撑起一个盛夏傍晚的巷子口，人情味十足。稚儿擎瓜柳蓬下，细犬逐蝶深巷中。人间繁华多笑语，唯我空余两鬓风。孩童水果猫狗飞蝇当然热闹，可都与你无关，这就叫孤独。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -415,8 +408,8 @@
    </center>
   </div>
  </center>
- <p>
-  只有当一个人独处的时候，他才可以完全成为他自己。
+ <p dir="ltr">
+  生活简单了，就多了聆听松涛、静观风雨、仰望星空、敞开心扉的机会，灵性俱足。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -430,8 +423,13 @@
    </center>
   </div>
  </center>
- <p>
-  年轻时总害怕“不合群”，以为“朋友多了路好走”，于是为了合群而合群，马不停蹄地去赶赴一场又一场热闹与繁华。
+ <p dir="ltr">
+  <strong>
+   第十、
+  </strong>
+  <strong>
+   要学会经营自己的生活。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -445,8 +443,8 @@
    </center>
   </div>
  </center>
- <p>
-  随着年龄渐长，才发现：世界是自己的，与他人毫无关系。与其花费时间与精力在酒桌上觥筹交错，去结交一些无关痛痒的“朋友”，还不如学会好好与自己相处。
+ <p dir="ltr">
+  我们不是天天混日子，也不是天天熬日子，而是天天享受日子，这就需要经营日子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -460,8 +458,8 @@
    </center>
   </div>
  </center>
- <p>
-  独处，是一种智慧的沉淀。能与自己好好相处的人，是内心足够强大和丰富的人。
+ <p dir="ltr">
+  心境简单了，就有心思经营生活；生活简单了，就有时间享受人生。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -475,12 +473,12 @@
    </center>
   </div>
  </center>
- <p>
-  当你悟透自己时，活得就自在了。不在意别人的眼光，不嫉妒别人的
-  <span href="https://www.secretchina.com/news/gb/tag/幸福" target="_blank">
-   幸福
+ <p dir="ltr">
+  尘世中有太多的喜怒，太多的悲欢，太多的烦恼和痛苦。惟其如此，要活得简单才
+  <span href="https://www.secretchina.com/news/gb/tag/快乐" target="_blank">
+   快乐
   </span>
-  ，不反复无常，不小题大做，平静地看周围，坦诚地对朋友。
+  。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -494,68 +492,27 @@
    </center>
   </div>
  </center>
- <p>
-  当你悟透自己时，压力就小了。钱财不是最重要的，身体是最珍贵的，好好地过生活，认真地爱自己，珍惜眼前的分分秒秒，回忆过去的点点滴滴，心里存着感恩和美好，删除愤怒和烦恼。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  当你悟透自己时，心胸就宽宏了。不再斤斤计较，不再自寻烦恼，看懂了人心难测，明白了敷衍伪装，受得起大起大落，放得下大悲大喜，再苦也能微笑，再难也会歌唱。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  当你悟透自己时，你也就看透了人生，你才明白活着是一件多么幸福的事。这个世上再多的钱财富贵，再高的名利身份，都微不足道，所有的勾心斗角都显得渺小可笑。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  人活一世，做人做事，悟透是一种领悟，看淡是一种财富，手抓得紧，累的就多，心放得宽，快乐就多。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  别总忧伤，别想太多，珍惜眼前，悟透了自己，把握住自己，过有滋有味的生活。
+ <p style="margin-bottom:12px;">
+  <hr style="border-top: 1px dashed  ;" width="100%"/>
+  <br/>
+  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  ：每位
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+  <center>
+   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+   </span>
+  </center>
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -570,9 +527,11 @@
   </center>
   <center>
    <div>
-    <div id="txt-mid2-t22-2017" style="display: block;  max-height: 351px;  overflow: hidden;">
-     <div id="SC-21">
+    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+     <div id="SC-21xx">
      </div>
+     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+     </ins>
     </div>
    </div>
   </center>
@@ -583,13 +542,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/936972.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/936972.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/936972.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/06/22/936972.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950286.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950286.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950286.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/24/950286.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/936972.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/950286.md' width='0px' height='0px'/>
