--- a/pages/p9/950272.md
+++ b/pages/p9/950272.md
@@ -1,4 +1,4 @@
-### 习近平一意孤行 李克强进退两难 政经局势生变(视频)
+### 人民还信？朝鲜首部“金正恩长篇小说”(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,69 +6,78 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <div id="story_video" style="text-align: center;margin-top: 20px;">
- </div>
- <p>
-  【看中国2020年9月4日讯】以
-  <span href="https://www.secretchina.com/news/gb/tag/李克强" target="_blank">
-   李克强
-  </span>
-  （65 岁)为首的中国国务院有四位副总理，分别是韩正、孙春兰、胡春华、刘鹤。各副总理分工不同，排名第一的韩正（66岁）分管发展改革、财政；孙春兰（70 岁）分管文教卫体；胡春华（57 岁)分管三农（农村、农业和农民）和扶贫；刘鹤（68岁）分管商务、金融和科技。
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
+ <p style="text-align: center;">
+  <img alt="10月10日，朝鲜劳动党75周年的党庆，当局在平壤举行了大规模阅兵仪式，金正恩在致词时泪洒现场" src="https://img3.secretchina.com/pic/2020/10-14/p2796321a477319840-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   10月10日，朝鲜劳动党75周年的党庆，当局在平壤举行了大规模阅兵仪式，金正恩在致词时泪洒现场。(图片来源:朝鲜官媒)
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  内蒙局势升级 传大量装甲车现身街头](http://141.164.51.119:10000/videos/news/0903.html)
-
-#### [ 🔥  【陈光诚专访】 当年发生了什麽？为什麽要支持川普竞选总统？触目惊心的亲身经历告诉你背后的故事](http://141.164.51.119:10000/videos/news/cgc02.html)
-
-#### [ 🔥  《为你而来》（法轮功修炼者的故事）](http://141.164.51.119:10000/videos/news/ComingForYou.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  从上述内容可以看出，由于年龄的原因，国务院人事未来会发生变动。而另有传闻称
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
+  【看中国2020年10月24日讯】
+  <strong>
+   朝鲜
+  </strong>
+  常对人民进行
+  <strong>
+   洗脑教育
+  </strong>
+  ，且神话领导人，以巩固其政权。平壤当局以领导人
+  <span href="https://www.secretchina.com/news/gb/tag/金正恩" target="_blank">
+   金正恩
   </span>
-  有意恢复设立中共中央委员会主席，从某种程度上，是要回归毛泽东时代。
+  的功绩为题材，出版了第一部长篇小说《复兴》（부흥），其内容歌颂
+  <strong>
+   金正恩
+  </strong>
+  自上任以来所推展的教育事业，且强调身为最高元首的正统性。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  政治不稳，经济将乱。
+  23日，根据朝鲜官媒《劳动新闻》报导，该国415文学创作团所出版的“不灭的旅程”系列长篇小说《复兴》，其书中详细介绍了
+  <span href="https://zh.wikipedia.org/wiki/%E9%87%91%E6%AD%A3%E6%81%A9">
+   金正恩
+  </span>
+  从2011年掌权以来，包括实施的国内12年国民教育、替大学教授于平壤市中心建造的“未来科学大街”、在平壤兴建爱育院（孤儿院）和普及校服等。
  </p>
  <p>
-  在全球央行年会期间，美联储主席鲍威尔8月27日宣布，对货币政策执行框架进行重大调整，美联储的通胀目标是随着时间推移能实现平均2%的目标。也就是美联储将在经历一定时间的低通胀之后，允许接下来一定时间内出现更高的通胀。
+  报导还评论了这部长篇小说，声称是推动国家走向富强道路的力量及泉源，对于人才资源的培育，已经于全国社会吹起了一股重视教育的风潮，并符合新世纪的要求，其在发展教育方面是永无止尽，只有这样才能够领先全球。此部作品呈现出上述的思想，宣称是一部反映时代精神的作品。
  </p>
  <p>
-  美联储是央行的风向标，其表态将令各国短期货币政策随之变动。其它国家应对
+  据了解，“4.15文学创作团”成立于1967年的文学创作团体，其专门从事创作以金日成和金正日为中心的“领导人形象文学”。其中以金日成为主题的丛书是“不灭的历史”；而以金正日为主题的丛书为“不灭的向导”。
+ </p>
+ <p>
+  据韩国《韩联社》分析认为，今年朝鲜遭受到国际社会的经济制裁、
   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
    武汉肺炎
   </span>
-  疫情，财政和货币轮番出力，反观中国的财政和货币政策与其它国家不同，这也表明中南海决策层熟知武汉肺炎病毒的实际情况......
+  全球疫情及风灾水害等影响，这部长篇小说《复兴》试图团结朝鲜内部势力，并强调金正恩主导体制下的正统性及其活跃性。
  </p>
  <p>
-  （文章全文请见下面链接，以及观看视频了解内容）
- </p>
- <p>
+  <strong>
+   没让百姓过好日子
+  </strong>
+  <strong>
+   金正恩的“宣传活动”防人民反抗？
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -83,9 +92,11 @@
   </div>
  </center>
  <p>
-  <span href="https://www.secretchina.com/kzgd/subscribe.html" target="_blank">
-   （在五彩缤纷的世界、信息爆炸的时代，真相就是先机和财富。成为《看中国》荣誉会员，就会最先看到“天钧政经”最全、更多、更精彩的评论分析文章。）
+  10月10日，
+  <span href="https://www.secretchina.com/news/gb/tag/朝鲜" target="_blank">
+   朝鲜
   </span>
+  劳动党75周年的党庆，当局在平壤举行了大规模阅兵仪式，该国领导人金正恩出席阅兵仪式且发表演说，但任谁都没想到，当他提到疫情及自然灾害等相关议题之时，金正恩竟然说着说着就突然流下眼泪，现场的民众见状也跟着眼泪直流。专家分析认为，这次金正恩一改先前的硬派作风，而在众人面前流下了男儿泪，能够看出他已开始担忧自己会遭到“反抗”，因此才策划这出“宣传活动”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -100,6 +111,9 @@
   </div>
  </center>
  <p>
+  <strong>
+   面临更严峻的饥荒
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,6 +128,7 @@
   </div>
  </center>
  <p>
+  今年以来，朝鲜天灾不断，在今年夏季就迎来史上最长的梅雨季，甚至在8月初至9月，更面临至少4个台风且挟带强风暴雨，致使全国最重要的谷仓地区受创，其雨量创下了40年来的历史新高。而使得今年朝鲜可能得准备应付情势比去年更严峻的饥荒。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -128,6 +143,7 @@
   </div>
  </center>
  <p>
+  根据总部位在瑞士、由世界20个主要国家的农业部长所组成国际组织“全球农业监测计划”（GEOGLAM）的预估，今年朝鲜可能得准备应付情势比去年更严峻的饥荒，而且去年就已经约有40%民众面临粮食短缺的情形。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -142,21 +158,7 @@
   </div>
  </center>
  <p>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  (文章与视频仅代表作者个人立场和观点)
+  首尔国家安全战略研究所的分析师林洙镐 （Lim Soo-ho）认为，朝鲜除了面对的问题之外，且外汇储备又耗尽，将可能形成一场“完美风暴”，在未来数月将会冲击食物价格和汇率，其引发的经济恐慌，金正恩将承受更多政治负担。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,7 +190,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -220,13 +222,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945083.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945083.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945083.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/04/945083.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/950272.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/950272.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/950272.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/25/950272.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/945083.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p9/950272.md' width='0px' height='0px'/>
