--- a/indexes/p3.md
+++ b/indexes/p3.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看民生](S看民生.md) 
-
+#### [法国疫情第二波威胁已至 医院急救床位爆满(图)](../pages/p3/950323.md) 
+#### [翻译太离谱 共和党高层要取消谷歌中国人签证(图)](../pages/p3/950319.md) 
+#### [有驱逐令在身华人女子 豪骗300万挥霍(图)](../pages/p3/950282.md) 
+#### [疫情爆发后 全球护照实力排名大变动(图)](../pages/p3/950304.md) 
+#### [英国曝海外护照签证细节 中共威胁将不承认(图)](../pages/p3/950215.md) 
+#### [中国人在韩国买地置产人数激增(图)](../pages/p3/950212.md) 
+#### [法国疫情第二波威胁已至 医院急救床位爆满(图)](../pages/p3/950323.md) 
+#### [这7类华人将失去美国庇护绿卡资格(图)](../pages/p3/950322.md) 
+#### [翻译太离谱 共和党高层要取消谷歌中国人签证(图)](../pages/p3/950319.md) 
+#### [有驱逐令在身华人女子 豪骗300万挥霍(图)](../pages/p3/950282.md) 
+#### [疫情爆发后 全球护照实力排名大变动(图)](../pages/p3/950304.md) 
+#### [英国曝海外护照签证细节 中共威胁将不承认(图)](../pages/p3/950215.md) 
+#### [中国人在韩国买地置产人数激增(图)](../pages/p3/950212.md) 
+#### [加拿大放宽留学生入境限制(图)](../pages/p3/950213.md) 
+#### [美国大选“终极版”：这1票来自太空(图)](../pages/p3/950189.md) 
+#### [王子沉睡15年 听到她声音后奇迹发生了(图)](../pages/p3/950176.md) 
+#### [惊：接种流感疫苗后 韩死亡人数不断增加(图)](../pages/p3/950160.md) 
+#### [邮寄选票存隐患 加州投票箱遭人恶意纵火(图/视频)](../pages/p3/950097.md) 
+#### [年薪超5万美元肥缺 工作就是吃饼干(图)](../pages/p3/950121.md) 
+#### [女婴起了这个名字 全家获免费上网18年(图)](../pages/p3/950091.md) 
+#### [中国擅长山寨 但为何仿制不出日本发动机？(图)](../pages/p3/950087.md) 
+#### [联合国各国代表纷批中共 吁释放两名加拿大人(图)](../pages/p3/950073.md) 
+#### [日本少年送错报 却意外收到读者暖心来信(图)](../pages/p3/950004.md) 
+#### [照镜被吓 女子脸盲症“连自己都记不住”(图)](../pages/p3/950040.md) 
+#### [巴西中共病毒疫苗测试 一名志愿者死亡(图)](../pages/p3/949999.md) 
+#### [美国移民局会选择性执法 逾期居留要注意(图)](../pages/p3/949996.md) 
