--- a/indexes/p4.md
+++ b/indexes/p4.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看博谈](S看博谈.md) 
-
+#### [看懂川普解体中共四部曲(图)](../pages/p4/950317.md) 
+#### [重提抗美援朝 真的准备打仗？(图)](../pages/p4/950308.md) 
+#### [从“全民炼钢”到“全民炼芯”(图)](../pages/p4/950311.md) 
+#### [我不会对人民开枪(图)](../pages/p4/950313.md) 
+#### [国民党领袖们患上斯德哥尔摩症候群？(图)](../pages/p4/950233.md) 
+#### [【民众心声】被騙了几十年 是时候该醒醒了(图)](../pages/p4/949894.md) 
+#### [看懂川普解体中共四部曲(图)](../pages/p4/950317.md) 
+#### [重提抗美援朝 真的准备打仗？(图)](../pages/p4/950308.md) 
+#### [从“全民炼钢”到“全民炼芯”(图)](../pages/p4/950311.md) 
+#### [我不会对人民开枪(图)](../pages/p4/950313.md) 
+#### [国民党领袖们患上斯德哥尔摩症候群？(图)](../pages/p4/950233.md) 
+#### [“抗美援朝”志愿军战俘：不该活着回国的人(图)](../pages/p4/950241.md) 
+#### [【民众心声】被騙了几十年 是时候该醒醒了(图)](../pages/p4/949894.md) 
+#### [电脑门带来巨变(图)](../pages/p4/950222.md) 
+#### [中共见风使舵 党媒变调放弃拜登(图)](../pages/p4/950258.md) 
+#### [数字人民币迅速沦为习近平“面子工程”(图)](../pages/p4/950224.md) 
+#### [世界终于敢面对中国了吗？(图)](../pages/p4/950191.md) 
+#### [美国检讨90年来外交政策最大失败(图)](../pages/p4/950210.md) 
+#### [美国大选最终会花落谁家？(图)](../pages/p4/950199.md) 
+#### [越南势成中共的心腹之患(图)](../pages/p4/950194.md) 
+#### [习近平没有“抗美援朝”的时间了(图)](../pages/p4/950134.md) 
+#### [一语双关：毛病不改积恶成习(图)](../pages/p4/950127.md) 
+#### [川普总统抗疫有误吗？(图)](../pages/p4/950096.md) 
+#### [林郑进入孤家寡人的最后岁月(图)](../pages/p4/950078.md) 
+#### [中共医保与民主国家医保大不同(图)](../pages/p4/950077.md) 
+#### [习近平推动新一波个人崇拜？(图)](../pages/p4/950075.md) 
