--- a/indexes/p8.md
+++ b/indexes/p8.md
@@ -1,3 +1,26 @@
-
-### 已转移至新页面 [看生活](S看生活.md) 
-
+#### [歌声悦耳又抢眼 反遭滥捕的黄鹂(图)](../pages/p8/950275.md) 
+#### [iPhone 12 Pro“金色”暗藏苹果巧思(图)](../pages/p8/950267.md) 
+#### [“方便面”怎么吃才健康？(图)](../pages/p8/949877.md) 
+#### [“树摇叶落 人抖福薄”下句90%人不知道(图)](../pages/p8/950173.md) 
+#### [作弊获取功名的代价(图)](../pages/p8/949874.md) 
+#### [8500万工作机会受武肺影响 这些职业最危险(图)](../pages/p8/950167.md) 
+#### [歌声悦耳又抢眼 反遭滥捕的黄鹂(图)](../pages/p8/950275.md) 
+#### [男人的教养(图)](../pages/p8/949865.md) 
+#### [iPhone 12 Pro“金色”暗藏苹果巧思(图)](../pages/p8/950267.md) 
+#### [“方便面”怎么吃才健康？(图)](../pages/p8/949877.md) 
+#### [“树摇叶落 人抖福薄”下句90%人不知道(图)](../pages/p8/950173.md) 
+#### [作弊获取功名的代价(图)](../pages/p8/949874.md) 
+#### [8500万工作机会受武肺影响 这些职业最危险(图)](../pages/p8/950167.md) 
+#### [汽车保养的4大误区 避开省大钱(图)](../pages/p8/950147.md) 
+#### [职场不受欢迎的7种人(图)](../pages/p8/950137.md) 
+#### [6个小故事 秒懂人生大道理(图)](../pages/p8/949858.md) 
+#### [孩子是“左撇子”要矫正吗？(组图)](../pages/p8/950044.md) 
+#### [iPhone 12 评价如何？外媒：2好1坏(图)](../pages/p8/950034.md) 
+#### [冰箱食物别久放 “这东西”易致命(组图)](../pages/p8/949939.md) 
+#### [到手钱财 为何如水流？(图)](../pages/p8/949390.md) 
+#### [转职还是换工作？ 活出“理想”最重要(组图)](../pages/p8/947355.md) 
+#### [7款易中“假网址”钓鱼的手机浏览器 App(图)](../pages/p8/949854.md) 
+#### [以德报怨的寡妇(图)](../pages/p8/949469.md) 
+#### [人生太闲 则别念窃生(组图)](../pages/p8/949860.md) 
+#### [不健康的“自恋” 常源于潜在的“自卑”(图)](../pages/p8/947349.md) 
+#### [了不起的情商－倾听(图)](../pages/p8/949810.md) 
