--- a/pages/p2/950342.md
+++ b/pages/p2/950342.md
@@ -1,4 +1,4 @@
-### 陶杰：水退的时候(图)
+### 五中全会前 朱镕基“露面”庆92寿辰引猜测(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="香港" src="https://img3.secretchina.com/pic/2020/8-14/p2753891a111210443-ss.jpg" style="height:400px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/10-25/p2803621a470005879-ss.jpg"/>
   <br>
-   8月11日，香港警察在发生抗议的商场前（图片来源：Photo by ISAAC LAWRENCE/AFP via Getty Images）
+   戴口罩的医生及护士围着朱镕基（穿红衣者）为他庆生，夫人劳安陪伴在身旁。（图片来源：网络截图）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,70 +21,138 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [希望之声广播](http://167.172.10.89/radio.html) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《街对面的烛光》- 中领馆前16年7x24小时接力静坐抗议](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  中美熱戰在即嗎？中共將如何消亡？（脑洞vs黑洞 第21集）](http://141.164.51.119:10000/videos/news/brain01.html)
-
-#### [ 🔥  《漫谈党文化》今天的共产党和过去不一样了？](http://141.164.51.119:10000/videos/news/../res/mtdwh/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月14日讯】
+  【看中国2020年10月25日讯】（看中国记者苗薇综合报导）已许久不曾露面的中共前总理
   <strong>
-   美国
-  </strong>
-  政府
-  <strong>
-   制裁
-  </strong>
-  以林郑为首的中港十一高官。
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/香港" target="_blank">
-    香港
+   <span href="https://www.secretchina.com/news/gb/tag/朱镕基" target="_blank">
+    朱镕基
    </span>
   </strong>
-  官员反应，这个说“最多我以后不去美国”，那个说“我在美国没有资产”。
+  ，日前在医院庆祝92岁生日的照片曝光，其精神状况不错，夫人劳安陪伴在侧。中共
+  <strong>
+   五中全会
+  </strong>
+  前气氛诡异，朱镕基突然如此“露面”，是否与
+  <strong>
+   中共内斗
+  </strong>
+  有关引发猜测。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  逢此人生巨变下的小脑条件反射，几十万月薪，平时将“为社会大众服务”挂在嘴边的香港高官即刻的反应，俱一个“我”字。没有想过：若被
-  <span href="https://www.secretchina.com/news/gb/tag/制裁" target="_blank">
-   制裁
+  北京时间24日上午，网上传出一张照片指，朱镕基92岁的生日是在医院度过，医生护士还送上蛋糕，为其庆祝。
+ </p>
+ <p>
+  据《苹果日报》报导，朱镕基在医院庆祝92岁生日照片显示，朱镕基身穿红袍，精神不错，夫人陪伴在侧，但不见两人子女朱燕来和朱云来。周围10多名戴上口罩的医生及护士准备了大蛋糕，还合唱生日快乐歌，送上祝福。
+ </p>
+ <p>
+  上述照片未显示朱镕基入住哪家医院。但一般中共高层治疗都由北京301医院负责。
+ </p>
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/10-25/p2803622a985434760-ss.jpg"/>
+  <br>
+   中共五中前夕，朱镕基在医院庆生照片流出。（图片来源：网络截图）
+  </br>
+ </p>
+ <p>
+  港媒报导说，久未露面的朱镕基，近年偶有传出他健康欠佳的消息。他去年未参加9月30日“10.1”招待会及10月1日天安门阅兵仪式，一度引起猜测。继同年9月28日给清华经管学院2019级MBA全体新生的回信曝光后，10月18日，朱亦以亲笔签名信函方式“露面”，他在信中表示，当日是清华经管学院顾问委员会第20次年会，“我因身体问题，不能参加”。他感谢与会的27名境外委员。这是他首次自揭健康有问题。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  本月23日，时政观察人士“一剑飘尘”在推特上转发两则国内网友爆料。两个消息源不同，但披露的内容一致，都是说北京301医院在10月16日晚上突然全院戒严，某中南海重要人物从地下通道赴该院就诊。据爆料，送医“大人物”因身份特殊，经从301医院与中南海之间的秘密地下通道送入301医院，医院因此全院戒严。网友猜测，接受治疗者至少为常委级。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这一消息疑指近日紧急住进301的是前中共总理朱镕基。不过也友人认为，深夜通过地下通道被紧急送到301医院“重要人物”或是
+  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+   习近平
   </span>
-  ，如何代表香港出席国际会议。
+  。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  领袖人物，先要将“小我”放开。大道之行也，天下为公，
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  10月14日，习近平在深圳庆祝特区成立40周年大会上讲话，突然多次忍不住大声咳嗽。15日，习近平结束南下行程，返回北京。10月23日，北京举行纪念朝鲜战争70周年大会，习近平在会上发言约40分钟后，步出会场时略显步履蹒跚，身体两侧摇晃。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  目前正值中共
+  <span href="https://www.secretchina.com/news/gb/tag/五中全会" target="_blank">
+   五中全会
   </span>
-  人念了几千年的书本大道理，在香港这帮“年年考第一”万千宠爱的官僚精英脑海，俱以“我”为先，想一想，“我”有几多损害。
+  前夕的敏感时期。朱镕基突然如此“露面”，未知是否与中内斗有关。
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  即使演戏，至少该会装一点气派：
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
-   美国
+  今年中共两会宣布推出“港版国安法”后，遭到港人以及国际社会一致谴责。5月23日，网络传出一段前中共总理朱镕基有关香港的谈话视频，这段视频拍摄于2002年11月19日，朱镕基在香港礼宾府的内部讲话说，“香港主权移交北京，如果搞坏了，中共岂不成了民族罪人”，演讲结束后，朱镕基走下台之时，突然高呼“我爱香港”，引起会场经久不息的掌声。同时还一度有未经证实的消息称，朱的孙女参与
+  <span href="https://www.secretchina.com/news/gb/tag/反送中" target="_blank">
+   反送中
   </span>
-  制裁香港，香港人会迎难而上，相信这一切是暂时的，光明即将到来。
- </p>
- <p>
-  一样陈腔滥调，绝不见一个“我”字。王国维论诗，有“有我”之境，与“无我”之境。在这种骨节眼上，就是要将这个小我隐闭起来，让舞台交给“香港”这个大我概念来占据。
- </p>
- <p>
-  既然声称“早有心理准备”，那么那几句反应的台词可不可以也decent一点？
+  抗争。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,86 +166,6 @@
    </center>
   </div>
  </center>
- <p>
-  如果我是香港精英，我会恐惧。几十年，名校毕业、天之骄子、亲友和同学争相捧着，全部是所谓赢在起跑线的人物。从来没有想到过有一天被美国列为敌人，而且越想越担心：原来不只美国，英国也会追随，原来所谓西方，还有一个“五眼联盟”。那么以后不知一家大小还能否去北海道泡温泉，原来一家人都忧虑，年年去日本三次、饮食购物，或从此断炊。老婆仔女愁云惨雾，毕竟他们是香港人。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  何况美国也很会玩政治词汇。很多事说得很模糊。让你以为最多只是不能入境，继而又让你知道：美国银行不欢迎你的户口。好事者再来告知，不只没有户口，美金和信用卡也不可使用。然后群组和不知真假的消息又传来：英国下一步也采取行动。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  精英平时除了在官场等升级，生活群组里除了比较镛记的烧鹅还是福临门的鱼翅好；或者以牛扒的肉质，美国安格斯近年比不上和牛。除此之后，人生和世界的见识相对薄弱，与那份全球数一数二的高薪成反比。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  香港的精伶小聪明太多。水退的时候，原来都没穿裤子，虽然两条赤裸的大腿还偷偷夹着一本外国护照，也一同现了形。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  （文章由作者授权《看中国》转载自《苹果日报》。
-  <span href="https://hk.appledaily.com/columnist/20200718/ZBYU7UW6SNEJ7HCMEYSMCYPMZI/" target="_blank">
-   原文链接
-  </span>
-  ）
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -196,7 +184,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -228,13 +216,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/942891.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/942891.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/942891.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/14/942891.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/950342.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/950342.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/950342.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/25/950342.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/942891.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/950342.md' width='0px' height='0px'/>
