--- a/indexes/p3.md
+++ b/indexes/p3.md
@@ -1,26 +1,3 @@
-#### [悉尼华女微信换汇 靠一招躲过骗局(图)](../pages/p3/950316.md) 
-#### [华人房东因干这事被赶出屋 房子强制出售(图)](../pages/p3/950312.md) 
-#### [法国疫情第二波威胁已至 医院急救床位爆满(图)](../pages/p3/950323.md) 
-#### [翻译太离谱 共和党高层要取消谷歌中国人签证(图)](../pages/p3/950319.md) 
-#### [有驱逐令在身华人女子 豪骗300万挥霍(图)](../pages/p3/950282.md) 
-#### [疫情爆发后 全球护照实力排名大变动(图)](../pages/p3/950304.md) 
-#### [美国男子错手买两张同号彩票 意外中头奖(图)](../pages/p3/950433.md) 
-#### [日本爷爷手作食物模型 成品逼真网友惊叹(图)](../pages/p3/950418.md) 
-#### [隔离期生日独自过？医护善举暖哭女孩(图)](../pages/p3/950415.md) 
-#### [美国最逼真万圣节民宅装扮 邻居打爆消防火警(图)](../pages/p3/950370.md) 
-#### [悉尼华女微信换汇 靠一招躲过骗局(图)](../pages/p3/950316.md) 
-#### [华人房东因干这事被赶出屋 房子强制出售(图)](../pages/p3/950312.md) 
-#### [英父搞笑宠物涂鸦爆红 背后故事太暖心(图)](../pages/p3/950344.md) 
-#### [真英雄！加州男子单枪匹马 山火中挽救400人(图)](../pages/p3/950340.md) 
-#### [法国疫情第二波威胁已至 医院急救床位爆满(图)](../pages/p3/950323.md) 
-#### [这7类华人将失去美国庇护绿卡资格(图)](../pages/p3/950322.md) 
-#### [翻译太离谱 共和党高层要取消谷歌中国人签证(图)](../pages/p3/950319.md) 
-#### [有驱逐令在身华人女子 豪骗300万挥霍(图)](../pages/p3/950282.md) 
-#### [疫情爆发后 全球护照实力排名大变动(图)](../pages/p3/950304.md) 
-#### [英国曝海外护照签证细节 中共威胁将不承认(图)](../pages/p3/950215.md) 
-#### [中国人在韩国买地置产人数激增(图)](../pages/p3/950212.md) 
-#### [加拿大放宽留学生入境限制(图)](../pages/p3/950213.md) 
-#### [美国大选“终极版”：这1票来自太空(图)](../pages/p3/950189.md) 
-#### [王子沉睡15年 听到她声音后奇迹发生了(图)](../pages/p3/950176.md) 
-#### [惊：接种流感疫苗后 韩死亡人数不断增加(图)](../pages/p3/950160.md) 
-#### [邮寄选票存隐患 加州投票箱遭人恶意纵火(图/视频)](../pages/p3/950097.md) 
+
+### 已转移至新页面 [看民生](S看民生.md) 
+
