--- a/pages/prog202/a102972245.md
+++ b/pages/prog202/a102972245.md
@@ -1,4 +1,4 @@
-### 【环球直击】10月2日完整版（2）
+### 【环球直击】10月26日完整版（2）
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,36 +7,29 @@
 
 <div><div class="post_content" itemprop="articleBody">
  <p>
-  【新唐人北京时间2020年10月03日讯】【环球直击】10月2日完整版（2）
+  【新唐人北京时间2020年10月27日讯】【环球直击】10月26日完整版
  </p>
  <p>
   <strong>
    提要
+   <br/>
   </strong>
+  喀什138人感染 医院隔离点
   <br/>
-  <ok href="https://www.ntdtv.com/gb/川普夫妇.htm">
-   川普夫妇
+  觉醒红二代
+  <ok href="https://www.ntdtv.com/gb/罗宇.htm">
+   罗宇
   </ok>
-  隔离继续履职 各国首脑问候
+  辞世生前促中国民众退党
   <br/>
-  <ok href="https://www.ntdtv.com/gb/十一反共日.htm">
-   十一反共日
+  蓬佩奥埃斯珀访问印度 应对
+  <ok href="https://www.ntdtv.com/gb/中共威胁.htm">
+   中共威胁
   </ok>
-  全球华人抗议中共暴政
   <br/>
-  全球
-  <ok href="https://www.ntdtv.com/gb/围剿中共.htm">
-   围剿中共
-  </ok>
-  东京举行
-  <ok href="https://www.ntdtv.com/gb/中国人权.htm">
-   中国人权
-  </ok>
-  问题会议
-  <br/>
-  专访资深参议员：中共是新的
-  <ok href="https://www.ntdtv.com/gb/邪恶帝国.htm">
-   邪恶帝国
+  美国务院：亚美尼亚-阿塞拜疆新
+  <ok href="https://www.ntdtv.com/gb/停火协议.htm">
+   停火协议
   </ok>
  </p>
  <div class="single_ad">
@@ -45,13 +38,13 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102954621.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102954621.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102954621.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/02/a102954621.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102972245.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102972245.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/prog202/a102972245.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.ntdtv.com/gb/2020/10/26/a102972245.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102954621.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/prog202/a102972245.md' width='0px' height='0px'/>
